components/card.css
/* Quiz Card + Backgrounds */

.card-section {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-around;
  gap: var(--gap);
  flex-direction: column;
}

.quiz-card {
  position: relative;
  z-index: 0;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: start;
  height: 250px;
  width: 80%;
  font-size: 1.5rem;
  box-shadow: 0px 0px 10px 0px var(--inky-black);
}

.card-title {
  padding: calc(var(--gap) / 4);
  text-decoration: none;
  color: var(--eggshell-white);
  background-color: var(--inky-black);
}

.card-title:hover {
  color: var(--inky-black);
  background-color: var(--eggshell-white);
}
.bookmark {
  position: absolute;
  top: 0;
  right: 0;
}

